@@ -1,4 +1,5 @@
 0.1.0
+ - feat: Add input and button feature to scrape selected stock (#8)
  - feat: Implement stock database and web scraper for financial data extraction
 0.0.1
  - enh: Add initial application structure and assets
